--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "ts-node src/index.ts",
 		"dev": "nodemon -x ts-node src/index.ts",
 		"build": "tsc",
-		"postinstall": "yarn run build"
+		"postinstall": "yarn"
 	},
 	"dependencies": {
 		"@types/socket.io": "^3.0.2",
