--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "ts-node src/index.ts",
+		"start:prod": "tsc && ts-node src/index.ts",
 		"dev": "nodemon -x ts-node src/index.ts",
 		"build": "tsc",
 		"postinstall": "yarn && yarn run start"
