--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "src/index.ts",
 	"license": "MIT",
 	"scripts": {
-		"start": "tsc && node dist/index.js",
+		"start": "ts-node src/index.ts",
+		"start:prod": "tsc && node dist/index.js",
 		"dev": "nodemon -x ts-node src/index.ts",
 		"build": "tsc",
 		"postinstall": "yarn && yarn run start"
@@ -25,5 +26,18 @@
 		"nodemon": "^2.0.20",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5"
-	}
+	},
+	"compilerOptions": {
+		"target": "es2017",
+		"module": "commonjs",
+		"outDir": "dist",
+		"esModuleInterop": true
+	},
+	"include": [
+		"src/**/*"
+	],
+	"exclude": [
+		"node_modules",
+		"**/*.test.ts"
+	]
 }
