--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "ts-node src/index.ts",
-		"start:prod": "tsc && node dist/index.js",
+		"start:prod": "yarn && ts-node src/index.ts",
 		"dev": "nodemon -x ts-node src/index.ts",
 		"build": "tsc"
 	},
