--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"mongodb": "^4.13.0",
+		"tsc": "^2.0.4",
 		"typescript-ioc": "^3.2.2"
 	},
 	"devDependencies": {
