--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"mongodb": "^4.13.0",
-		"tsc": "^2.0.4",
-		"typescript-ioc": "^3.2.2"
+		"typescript-ioc": "^3.2.2",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.5"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
 		"@types/node": "^18.14.2",
 		"concurrently": "^7.6.0",
 		"nodemon": "^2.0.20",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.9.5"
 	},
 	"compilerOptions": {
 		"target": "es2017",
