--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@types/express": "^4.17.17",
 		"@types/node": "^18.14.2",
 		"concurrently": "^7.6.0",
-		"nodemon": "^2.0.20",
+		"nodemon": "^2.0.20"
 	},
 	"compilerOptions": {
 		"target": "es2017",
